dark mode fix + btn 10

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -107,7 +107,6 @@
 
   .bar {
     background-color: var(--color-rev);
-    will-change: transform;
   }
 
   .bg-bar {
